# Rlone-3DS

./: .gitignore  .gitmodules  BUILDING  Makefile  Makefile.3ds  README
3ds/: Rlone.rsf
3ds/romfs/: autorun.ini
3ds/romfs/tex/: title_bg.tga
cfg/: compilation.mk  libraries.mk
include/: audio.h  config.h  input.h  log.h  map.h  map_debug.h  map_default.h  map_gen.h  map_type.h  object.h  object_armor.h  object_arrows.h  object_bow.h  object_chest.h  object_column.h  object_door.h  object_goblin.h  object_gold.h  object_health_potion.h  object_inspecter.h  object_loot.h  object_loot_chest.h  object_manager.h  object_mob.h  object_npc.h  object_player.h  object_projectile.h  object_projectile_arrow.h  object_slash.h  object_stairs.h  object_starter_chest.h  object_statue.h  object_sword.h  object_ticker.h  object_zombie.h  renderer.h  renderer_dialog.h  renderer_entity.h  renderer_util.h  util.h
res/cfg/: autorun.ini
sh/: 00.config.sh  01.checkroot.sh  02.getopts.sh  11.dump.sh  20.detect.sh  21.debian.ubuntu.sh  22.arch.sh  23.openbsd.sh  24.solus.sh  70.runner.sh  80.copy.sh  99.install.sh  Makefile
src/: Makefile  audio.c  config.c  input.c  log.c  rlone.c
src/map/: Makefile  debug.c  default.c  gen.c  map.c
src/object/: Makefile  armor.c  arrows.c  bow.c  chest.c  column.c  door.c  goblin.c  gold.c  health_potion.c  inspecter.c  loot.c  loot_chest.c  manager.c  mob.c  npc.c  object.c  player.c  projectile.c  projectile_arrow.c  slash.c  stairs.c  starter_chest.c  statue.c  sword.c  ticker.c  zombie.c
src/renderer/: Makefile  dialog.c  entity.c  renderer.c  util.c
vita/: CMakeLists.txt  autorun.ini
windows/: libraries.h  resource.h  rlone.aps  rlone.rc  rlone.sln  rlone.vcxproj  rlone.vcxproj.filters  unistd.h
